--- a/ex-b-functions/Cargo.toml
+++ b/ex-b-functions/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "hello"
+name = "ex-b-functions"
 version = "0.1.0"
 edition = "2021"
-authors = ["Simon Segal <utzbach@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
