--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,4 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 **/.DS_Store
-**/rustc_info.json
+**/.rustc_info.json
