--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
-**/.DS_Store
-**/.rustc_info.json
+**/*.DS_Store
+DS_Store
+**/target/**/.rustc_info.json
